--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,7 @@
-<a href="https://ww19960906.github.io/">首页</a>
+<nav>
+  <ul class="nav nav-pills">
+    <li role="presentation" class="active"><a href="https://ww19960906.github.io/">首页</a></li>
+    <li role="presentation"><a href="#">Profile</a></li>
+    <li role="presentation"><a href="#">Messages</a></li>
+  </ul>
+</nav>
