--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>{{ page.title }}</title>
-  </head>
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <script src="../js/bootstrap.min.js"></script>
+</head>
 
 <body>
   {% include header.html %}
