--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-  {% include header.html %}
-  {{content}}
-  {% include footer.html %}
+  <div class="container">
+    {% include header.html %}
+    {{content}}
+    {% include footer.html %}
+  </div>
 </body>
 
 </html>
