--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <script src="../js/jquery-2.2.4.min.js"></script>
@@ -10,18 +11,18 @@
   <style>
     @media (min-width: 992px) {
       .container {
-        width: 60%;
+        width: 65%;
       }
     }
   </style>
 </head>
 
 <body>
+  {% include header.html %}
   <div class="container">
-    {% include header.html %}
     {{content}}
-    {% include footer.html %}
   </div>
+  {% include footer.html %}
 </body>
 
 </html>
