--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="..../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../css/bootstrap.min.css">
   <script src="../../js/jquery-2.2.4.min.js"></script>
-  <script src=".../js/bootstrap.min.js"></script>
+  <script src="../../js/bootstrap.min.js"></script>
   <style>
     @media (min-width: 992px) {
       .container {
