--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
       .container {
         width: 65%;
       }
+      .center{
+        min-height: 80%;
+      }
     }
   </style>
 </head>
@@ -20,7 +23,7 @@
 <body>
   <div class="container">
     {% include header.html %}
-    {{content}}
+    <div class="center">{{content}}</div>
     {% include footer.html %}
   </div>
 </body>
