更改引用方式

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<link rel="stylesheet" href="/css/posts.css">
 {{content}}
 <hr/>
 <p>{{ page.date | date_to_string }}</p>
