--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,19 +5,8 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
   <title>{{ page.title }}</title>
-  <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
-  <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
-    @media (min-width: 992px) {
-      .container {
-        width: 65%;
-      }
-      .center{
-        min-height: 80%;
-      }
-    }
-  </style>
+  {% include require.html %}
+  <link rel="stylesheet" href="/css/default.css">
 </head>
 
 <body>
