--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>{{ page.title }}</title>
   {% include require.html %}
   <link rel="stylesheet" href="/css/default.css">
 </head>
 
-<body>
+<body style="height: 100%;">
   <div class="container">
-    {% include header.html %}
-    <div class="center">{{content}}</div>
-    {% include footer.html %}
+    <div id="header">{% include header.html %}</div>
+    <div id="main">{{content}}</div>
+    <div id="footer">{% include footer.html %}</div>
   </div>
 </body>
 
