--- a/css/default.css
+++ b/css/default.css
@@ -1,8 +1,22 @@
 @media (min-width: 992px) {
-      .container {
-        width: 65%;
-      }
-      .center{
-        min-height: 100%;
-      }
+  .container {
+    position: relative;
+    padding-bottom: 70px;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: start;
+    width: 65%;
+    min-height: 100%;
+  }
+  #header{
+    align-self: flex-end;
+  }
+  #main{
+    margin: 20px;
+  }
+  #footer{
+    position: absolute;
+    bottom: 0px;
+    padding-bottom: 10px;
+  }
 }
