标题浮动下拉显示 日期独立

--- a/css/default.css
+++ b/css/default.css
@@ -1,12 +1,21 @@
+.container {
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: start;
+  min-height: 100%;
+  padding-bottom: 70px;
+}
+
+#footer{
+  position: absolute;
+  padding-bottom: 10px;
+  bottom: 0px;
+}
+
 @media (min-width: 992px) {
   .container {
-    position: relative;
-    padding-bottom: 70px;
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: start;
     width: 65%;
-    min-height: 100%;
   }
   #header{
     align-self: flex-end;
@@ -15,8 +24,5 @@
     margin: 20px;
   }
   #footer{
-    position: absolute;
-    bottom: 0px;
-    padding-bottom: 10px;
   }
 }
