--- a/css/index.css
+++ b/css/index.css
@@ -2,22 +2,25 @@
   display: none;
 }
 
-.postList li{
-  line-height: 50px;
-  list-style: none;
+.postList ul{
+  list-style-type: none;
 }
 
-.postList li:after{
+.postList li{
+  line-height: 50px;
+}
+
+.postList li::after{
   content: "";
   display: block;
   width: auto;
-  height: 10px;
+  height: 4px;
   margin: 10px;
   border-top: 1px solid #abc;
   border-bottom: 1px solid #abc;
 }
 
-.postList li:last-child:after{
+.postList li::last-child:after{
   display: none;
 }
 
@@ -28,6 +31,11 @@
 }
 
 .postEcp{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 25px;
+  width: 95%;
+  padding-left: 10px;
   color: #444;
 }
 
@@ -35,8 +43,13 @@
   .dateList{
     position: fixed;
     display: block;
-    width: 90px;
+    width: 100px;
     margin-left: -100px;
+  }
+
+  .dateList ul{
+    padding-left: 10px;
+    list-style-type: none;
   }
 
   .dateList li>a{
@@ -51,16 +64,17 @@
 
   .postList li>a{
     display: block;
-    height: 50px;
     overflow: hidden;
+    text-overflow:ellipsis; 
+    height: 50px;
     text-decoration: none;
-    background: radial-gradient(at 20px 25px, rgba(212, 212, 255, 1) 10%, rgba(0, 0, 0, 0) 70%);
+    background: radial-gradient(at 30px 10px, rgba(212, 212, 255, 1) 10%, rgba(0, 0, 0, 0) 60%);
     transition: height 0.30s ease-in;
   }
 
   .postList li>a:hover{
-    height: 100px;
-    transition: height 0.75s ease-in;
+    height: 98px;
+    transition: height 0.75s ease-in 0.3s;
   }
 
   .postUrl{
