始终显示右侧滚动条以避免变形

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <nav>
   <ul class="nav nav-pills">
     <li role="presentation" class="active"><a href="https://ww19960906.github.io/">首页</a></li>
-    <li role="presentation"><a href="#">Profile</a></li>
-    <li role="presentation"><a href="#">Messages</a></li>
+    <li role="presentation"><a href="https://github.com/ww19960906">github</a></li>
+    <li role="presentation"><a href="https://github.com/ww19960906/ww19960906.github.io">ww19960906.github.io</a></li>
   </ul>
 </nav>
