--- a/css/index.css
+++ b/css/index.css
@@ -20,22 +20,23 @@
   border-bottom: 1px solid #abc;
 }
 
-.postList li::last-child:after{
+.postList li:last-child::after{
   display: none;
 }
 
 .postList li>a{
   display: inline-block;
+  overflow: hidden;
+  max-height: 98px;
   padding-left: 20px;
   text-decoration: none;
 }
 
 .postEcp{
   overflow: hidden;
-  text-overflow: ellipsis;
-  line-height: 25px;
-  width: 95%;
-  padding-left: 10px;
+  line-height: 24px;
+  margin-left: 10px;
+  margin-right: 35px;
   color: #444;
 }
 
@@ -64,10 +65,7 @@
 
   .postList li>a{
     display: block;
-    overflow: hidden;
-    text-overflow:ellipsis; 
     height: 50px;
-    text-decoration: none;
     background: radial-gradient(at 30px 10px, rgba(212, 212, 255, 1) 10%, rgba(0, 0, 0, 0) 60%);
     transition: height 0.30s ease-in;
   }
